Fix & Improve multiple select2 style (inputs core assets)
TLDR; Need `yarn build` in terminal.

Tested on Chromium 134 & Firefox 137

---

auto height outer field when need more lines (bad overflow fix)
Inspired by: https://stackoverflow.com/questions/36681206
(how-to-automatically-increase-the-height-of-select2-input-box-multiple)

Fix disgraceful height:
calc max-width to leave little space for search cursor (textarea)
when too long tags have selected2 add unattractive height at bottom

Adjust textarea style (search cursor placement)

--- a/assets/core/scss/_inputs-style.scss
+++ b/assets/core/scss/_inputs-style.scss
@@ -29,6 +29,11 @@ button, input, optgroup, select {
       padding: 0 3px;
       line-height: 1.5;
     }
+    // Fix multi lines tags outer of field (overflow)
+    &--multiple {
+      height: auto;
+    }
+
   }
 }
 
@@ -57,7 +62,6 @@ button, input, optgroup, select {
 
     .select2-selection__rendered {
       color: $input-color;
-      // line-height: 30px;
     }
 
     .select2-selection__placeholder {
@@ -102,7 +106,18 @@ button, input, optgroup, select {
     .select2-selection__choice {
       background-color: $input-bg;
       border-color: $input-border;
-      margin-top: 3px;
+      margin: 3px 2px 3px 0px;
+      // Fix disgraceful height (when too long tag, the search field need little place)
+      max-width: calc(100% - 20px);
+    }
+
+    .select2-search {
+      &.select2-search--inline {
+        // Adjust textarea style (search cursor placement)
+        .select2-search__field {
+          margin: 0 0 5px 0;
+        }
+      }
     }
 
     .select2-selection__choice__remove {
